# localizer

./: .env.example  .gitignore  .pdm-python  API_TESTING_README.md  CHANGES_SUMMARY.md  FASTAPI_TRANSLATION_SERVICE.md  IMPLEMENTATION_SUMMARY.md  README.md  SUPABASE_INTEGRATION.md  TRANSLATION_UI_UPDATES.md  api_curl_tests.sh  api_quick_tests.sh  process_md_dir.py  pyproject.toml  pytest.ini  run_api_tests.sh  run_service.py  split_chapters.py  supabase_schema.sql  test_model_dict.py
astro-translation-frontend/: .env.example  .gitignore  DEPLOYMENT.md  README.md  astro.config.mjs  package.json  tailwind.config.mjs  tsconfig.json  wrangler.toml
astro-translation-frontend/src/: client.tsx  env.d.ts
book_maker/: cli.py  utils.py
book_maker/loader/: __init__.py  base_loader.py  epub_loader.py  helper.py  md_loader.py  srt_loader.py  txt_loader.py
book_maker/translator/: __init__.py  base_translator.py  chatgptapi_translator.py  gemini_translator.py
books/: BM_EN.md  TSI_EN_test.qmd  translation_log.json
books/21fff/: ch00.md  ch07.md  ch13.md  ch18.md  ch19.md
books/JB/: CH08.md  CH08_EN.md  CH08_EN_edited.md  CH11.md  CH11_20250925_1146_gemini-2_5-pro.md  translation_log.json
books/OTALP/: OTALP_EN.md  OTALP_ES.docx  OTALP_ES.md  translation_log.json
books/TOMS_ES/: TOMS_ES.md  TOMS_ES.tex
books/TOMS_FI/: TOMS_EN.docx  TOMS_FI.docx  TOMS_FI.md
books/TOMS_FR/: TOMS_EN_20250908_1308_gemini-2_5-pro.md
books/TOMS_IT/: TOMS_IT.docx  TOMS_IT.md
books/TOMS_NL/: TOMS_EN.md  TOMS_NL.docx  TOMS_NL.md  translation_log.json
books/bm-al/: ch00.docx  ch00.md  ch00_20250617_1328_gemini-2_5-pro-preview-06-05.md  ch01.docx  ch01_20250617_1335_gemini-2_5-pro-preview-06-05.md  ch02_20250617_1402_gemini-2_5-pro-preview-06-05.md  ch03.docx  ch03.md  ch03_20250617_1349_gemini-2_5-pro-preview-06-05.md  ch04.md  translation_log.json
books/bm-it/: ch00_20250305_2057_o3-mini.md  ch00_20250305_2106_o3-mini.md  ch00_20250305_2108_o3-mini.md  ch00_20250305_2111_o3-mini.md  ch00_20250305_2119_o3-mini.md  ch01.md  ch01_20250305_2120_o3-mini.md  ch01_20250306_1219_o3-mini.md  ch02.md  ch02_20250306_1220_o3-mini.md  ch02_20250306_1253_o3-mini.md  ch03_20250305_2124_o3-mini.md  ch03_20250306_1222_o3-mini.md  ch03_20250306_1256_o3-mini.md  ch04_20250306_1238_o3-mini.md  ch04_20250306_1304_o3-mini.md  ch05.md  ch05_20250306_1243_o3-mini.md  ch05_20250306_1308_o3-mini.md  ch06.md  ch06_20250306_1249_o3-mini.md  ch06_20250306_1348_o3-mini.md  ch07.md  ch07_20250306_1349_o3-mini.md  ch08.md  ch08_20250306_1356_o3-mini.md  ch09.md  ch09_20250306_1401_o3-mini.md  ch10.md  ch10_20250306_1407_o3-mini.md  ch11.md  ch12.md  ch13.md  (+61 more)
docs/: DOCUMENTATION_CENTRALIZATION_SUMMARY.md  FASTAPI_TRANSLATION_SERVICE.md  api.md  cmd.md  commands_examples.md  implementation.md  index.md  installation.md  prompts.md  quickstart.md  troubleshooting.md  ui_updates.md
frontend/: index.html
my_app/: __init__.py  core.py  main.py  supabase_client.py
prompts/: commands.md  en-translation-2.prompt..md  en-translation.prompt.md  fi-translation-2.prompt .md  fi-translation-2.prompt.md  fi-translation-3.prompt.md  fi-translation.prompt.md  formatter.prompt.md  fr-edit-2.prompt.md  fr-edit.prompt.md  fr-translate.prompt.md  fr-translation-2.prompt.md  fr-translation.prompt.md  it-translation-2.prompt.md  it-translation.prompt.md  nl-edit-o3.prompt.md  nl-translation-2.prompt.md  nl-translation-4.prompt.md
tests/: EXAMPLES.md  __init__.py  conftest.py  run_tests.py  setup_env.py  test_api.py  test_basic_prompts.py  test_cli_commands.py  test_debug.py  test_examples.py  test_form_submission.py  test_markdown_files.py  test_translation.py  test_translation_request.py  test_translation_with_prompt.py
utils/: process_md_dir.py  promptdown_debug.py  rename_files.py  split_chapters.py
(+377 files in other folders)
