[project]
name = "bbook-maker"
description = "The bilingual_book_maker is an AI translation tool that uses ChatGPT to assist users in creating multi-language versions of epub/txt files and books."
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]
requires-python = ">=3.10"
authors = [
    { name = "yihong0618", email = "zouzou0208@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "anthropic",
    "backoff",
    "bs4",
    "ebooklib>=0.19",
    "google-generativeai",
    "langdetect",
    "litellm",
    "openai>=1.68.2",
    "PyDeepLX",
    "requests",
    "rich>=14.0.0",
    "tiktoken",
    "tqdm",
    "groq>=0.5.0",
    "promptdown>=0.9.0",
    "fastapi>=0.115.14",
    "beautifulsoup4>=4.13.4",
    "pytest>=8.4.1",
    "lxml>=6.0.0",
    "html5lib>=1.1",
    "soupsieve>=2.7",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
    "python-multipart>=0.0.20",
]

[project.scripts]
bbook_maker = "book_maker.cli:main"
dir_process = "utils.process_md_dir:main"
rename_files = "utils.rename_files:main"
promptdown = "promptdown_cli:main"
start_api = "my_app.main:main"

[project.urls]
Homepage = "https://github.com/yihong0618/bilingual_book_maker"

[tool.pdm]
plugins = ["pdm-autoexport"]
[[tool.pdm.autoexport]]
filename = "requirements.txt"
without-hashes = true

[tool.pdm.scripts]
test-api = "pytest tests/test_api.py"
test-api-verbose = "pytest tests/test_api.py -v"
test-api-markers = "pytest tests/test_api.py -m"
start-service = "python run_service.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--log-cli-level=INFO"
]
markers = [
    "api: marks tests as API tests",
    "integration: marks tests as integration tests",
    "slow: marks tests as slow"
]
[build-system]
requires = ["pdm-backend>=2.0.0"]
build-backend = "pdm.backend"
[tool.pdm.version]
source = "scm"
